2007-01-08  Richard Hult  <rhult@Celery.local>

	* Install the perl modules in the same prefix as the rest.

2007-01-07  Richard Hult  <richard@imendio.com>

	* Update loudmouth.

2006-12-18  Richard Hult  <richard@imendio.com>

	* Update for GNOME SVN.
	- Add support for multiples cores, might need to disable
	this if it turns out to be a problem.
	- Add clean-build command that cleans before building.

2006-12-18  Richard Hult  <richard@imendio.com>

	* Add docbook files for gnome docs.

2006-12-11  Richard Hult  <richard@imendio.com>

	* Initial commit to svn.